Made `UnitOfWorkAspect` extensible and expose session configuration.